Closed Bug 678656 Opened 15 years ago Closed 15 years ago

fix some debug only warnings in js/src/jsemit.cpp

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

Details

Attachments

(1 file)

jsemit.cpp: In function ‘JSBool js_EmitTree(JSContext*, JSCodeGenerator*, JSParseNode*)’: jsemit.cpp:5183: warning: ‘tps.TempPopScope::savedScopeStmt’ may be used uninitialized in this function jsemit.cpp:5183: warning: ‘tps.TempPopScope::savedBlockBox’ may be used uninitialized in this function jsemit.cpp:6697: warning: ‘tps.TempPopScope::savedScopeStmt’ may be used uninitialized in this function jsemit.cpp:6697: warning: ‘tps.TempPopScope::savedBlockBox’ may be used uninitialized in this function jsemit.cpp: In function ‘JSBool EmitSwitch(JSContext*, JSCodeGenerator*, JSParseNode*, JSStmtInfo*)’: jsemit.cpp:3177: warning: ‘tps.TempPopScope::savedScopeStmt’ may be used uninitialized in this function jsemit.cpp:3177: warning: ‘tps.TempPopScope::savedBlockBox’ may be used uninitialized in this function
Assignee: general → sayrer
Attachment #552793 - Flags: review?(jorendorff)
Attachment #552793 - Flags: review?(jorendorff) → review+
Whiteboard: [checkin-needed]
This warning isn't debug-only. I only see it in opt builds. I'm going to get rid of the #ifdef as well and just always initialize these. I pushed this to jsdbg2 branch. In hindsight that's a pretty silly thing to have done, but it'll land with jsdbg2, I think this weekend. If it doesn't, or if jsdbg2 bounces, I'll push it to mozilla-inbound separately.
Whiteboard: [checkin-needed]
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: