Bug 678656 - fix some warnings in js/src/jsemit.cpp. r=dmandelin.